reproduced the error

--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,5 +8,10 @@
 @using Microsoft.JSInterop
 @using BlazorInteractiveServerAspNet
 @using BlazorInteractiveServerAspNet.Components
+
 @using MudBlazor
 @using MudBlazor.Services
+
+@* Configuration *@
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
