--- a/Components/App.razor
+++ b/Components/App.razor
@@ -11,11 +11,11 @@
 	
 	
     <link rel="stylesheet" href="BlazorInteractiveServerAspNet.styles.css" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="InteractiveServer" />
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
 	<script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
