--- a/Components/Routes.razor
+++ b/Components/Routes.razor
@@ -1,6 +1,24 @@
-﻿<Router AppAssembly="@typeof(Program).Assembly">
+﻿@using BlazorInteractiveServerAspNet.Components.Layout
+@using Microsoft.AspNetCore.Components.Authorization
+@using BlazorInteractiveServerAspNet.Components.Pages
+
+@inject NavigationManager NavigationManager
+
+<MudThemeProvider IsDarkMode="true"/>
+<MudDialogProvider />
+<MudSnackbarProvider />
+
+<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        <CascadingAuthenticationState>
+            <AuthorizeView>
+                <Authorized>
+                    <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
+                </Authorized>
+                <NotAuthorized>
+                    <LoginPage/>
+                </NotAuthorized>
+            </AuthorizeView>
+        </CascadingAuthenticationState>
     </Found>
 </Router>
